2006-04-18  Robert Schuster  <robertschuster@fsfe.org>

	* examples/gnu/classpath/examples/swing/DocumentFilterDemo.java:
	New file.
	* examples/gnu/classpath/examples/swing/Demo.java:
	(mkMenuBar): Added DocumenFilter demo.

2006-04-18  Tom Tromey  <tromey@redhat.com>

	* doc/www.gnu.org/include/layout.wml: Add FMJ.

2006-04-18  Mark Wielaard  <mark@klomp.org>

	Reported by John Sullivan (johns@fsf.org)
	* doc/www.gnu.org/stories.wml: Update JikesRVM location.

2006-04-18  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JInternalFrame.java
	(JDesktopIcon.getAccessibleContext): Added API docs,
	(getDefaultCloseOperation): Likewise,
	(paramString): Added 'title' attribute,
	(setDefaultCloseOperation): Added API docs.

2006-04-18  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JSlider.java
	(paramString): Reimplemented.

2006-04-18  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JComboBox.java
	(paramString): Reimplemented,
	(getAccessibleContext): Added API docs,
	(AccessibleJComboBox.getAccessibleRole): Likewise.

2006-04-18  Roman Kennke  <kennke@aicas.com>

	* javax/swing/RepaintManager.java
	(dirtyComponentsWork): New field.
	(ComponentComparator): Use dirtyComponentsWork instead of
	dirtyComponents.
	(RepaintManager): Initialize new field.
	(paintDirtyRegions): Swap dirtyComponents with dirtyComponentsWork
	and work on the copy.

2006-04-18  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/swing/SwingComponentPeer.java
	(setBounds): Call reshape().
	* gnu/java/awt/peer/swing/SwingContainerPeer.java
	(SwingContainerPeer): Changed argument to be a Component
	instead a Container.
	(getInsets): Call insets().
	(handleMouseEvent): Added null check to avoid NPE.
	(handleMouseMotionEvent): Added null check to avoid NPE.
	
2006-04-18  Roman Kennke  <kennke@aicas.com>

	PR 27185
	* javax/swing/JComponent.java
	(paintChildrenWithOverlap): When one child is not opaque, propagate